[package]
name = "vkism"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
bytemuck = "1.22.0"
env_logger = "0.11.8"
glfw = { version = "0.59.0", features = ["ash", "vulkan"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive", "alloc"] }
anyhow = "1.0.98"
shaderc = "0.9.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = [
    "UI_ViewManagement",
    "Win32_Graphics_Dwm",
]}
